RESOLVED FIXED39431
editing/selection/extend-selection-after-double-click.html crashes on the Leopard Intel release bot
https://bugs.webkit.org/show_bug.cgi?id=39431
Summary editing/selection/extend-selection-after-double-click.html crashes on the Leo...
Martin Robinson
Reported 2010-05-20 10:05:57 PDT
This appears to be due to a double-free in LayoutTestController.
Attachments
Patch (1.65 KB, patch)
2010-05-20 10:08 PDT, Martin Robinson
ojan: review+
Martin Robinson
Comment 1 2010-05-20 10:08:01 PDT
Martin Robinson
Comment 2 2010-05-20 10:15:36 PDT
WebKit Review Bot
Comment 3 2010-05-20 10:48:36 PDT
http://trac.webkit.org/changeset/59844 might have broken SnowLeopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.