2010-05-20  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Ojan Vafai.

        editing/selection/extend-selection-after-double-click.html crashes on the Leopard Intel release bot
        https://bugs.webkit.org/show_bug.cgi?id=39431

        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setEditingBehavior):
        Prevent a double-free by not having this variable be in the auto-release pool.

Canonical link: https://commits.webkit.org/50953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59844 268f45cc-cd09-0410-ab3c-d52691b4dbfc